Add Tutorial code up to tutorial 100

--- a/ASPNETCORE_EmployeeManagement/Views/_ViewImports.cshtml
+++ b/ASPNETCORE_EmployeeManagement/Views/_ViewImports.cshtml
@@ -4,3 +4,6 @@
 
 @using Microsoft.AspNetCore.Identity
 @inject SignInManager<ApplicationUser> SignInManager
+
+@using Microsoft.AspNetCore.Authorization
+@inject IAuthorizationService authorizationService;
