--- a/ASPNETCORE_EmployeeManagement/Views/Administration/EditRole.cshtml
+++ b/ASPNETCORE_EmployeeManagement/Views/Administration/EditRole.cshtml
@@ -10,6 +10,7 @@
     <div class="form-group row">
         <label asp-for="Id" class="col-sm-2 col-form-label"></label>
         <div class="col-sm-10">
+            @* Read Only *@
             <input asp-for="Id" disabled class="form-control">
         </div>
     </div>
